--- a/src/Components/Area/Area.module.css
+++ b/src/Components/Area/Area.module.css
@@ -43,7 +43,18 @@
     align-items: center;
     justify-content: center;
 
+    gap: 1rem;
+
     height: 100vh;
+}
+
+.Body h1{
+    margin-top: 2rem;
+    font-size: 50px;
+}
+
+.Body p{
+    font-size: 20px;
 }
 
 .Banner{
@@ -53,9 +64,9 @@
 
 
     width: 100%;
-    height: 60%;
+    height: 50%;
 
-    background-image: url(./src/img/Banner.jpg);
+    background-image: url(./src/img/Banner2.jpg);
     background-size: cover; 
     background-position: center; 
 }
@@ -69,6 +80,8 @@
 }
 
 .Form{
+    margin-top: 2rem;
+
     display: flex;
     flex-direction: column;
 
