--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chau+Philomene+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+    font-family: "Montserrat", sans-serif;
+    text-decoration: none;
+}
+
+:root {
+    --var-White: #ffffff;
+    --var-AzulOceano: #44749d;
+    --var-AzulBebe: #c6d4e1;
+    --var-Beje: #ebe7e0;
+    --var-Cinza: #bdb8ad;
+}
+
 #Cotacao{
     cursor: pointer;
 
